--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -1,10 +1,4 @@
 ---
-line_width: 0.6
-font_size: 9
-title_font_size: 9
-font_family: monospace
-fig_size_x: 9
-fig_size_y: 5
 debug_mode: 1                                   # plot all spectra
 object_name: HD123299                           # Target name (useful for Simbad query)
 period: 51.41891                                # If the period of the orbit is already known use this param (period in days). 
@@ -17,6 +11,19 @@ line_color: black                               # Define the color of the fitted
 points_color: red,black                         # Define the color of the dots ex 'red' or a color
                                                 # cycle for each observer ex with 3 observers 'red,black,yellow'
 
-radial_velocity_correction: barycentric         # The kind of velocity correction. Must be ‘barycentric’ or ‘heliocentric’.                     
+radial_velocity_correction: barycentric         # The kind of velocity correction. Must be ‘barycentric’ or ‘heliocentric’.  
 
+precision: .1
+lambda_ref: 6562.82       
+model: voigt                                    # gaussian, voigt or lorentz
+spectral_region: 8
+fwhm: 1
+gaussian_width: 5
+
+# result options
+font_size: 9
+title_font_size: 9
+font_family: monospace
+fig_size_x: 9
+fig_size_y: 5
 dpi: 150
