--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -1,8 +1,8 @@
 ---
 debug_mode: 1                                   # plot all spectra
 object_name: HD123299                           # Target name (useful for Simbad query)
-period: 51.41891                                # If the period of the orbit is already known use this param (period in days). 
-period_guess:                                   # If the period is uncertain use this param (period in days).
+period:                                         # If the period of the orbit is already known use this param (period in days). 
+period_guess: 51                                # If the period is uncertain use this param (period in days).
 title: "α Dra - Phased radial-velocities - observations collected from April 2022 to April 2023"
 subtitle: "StarEx HR - G. Bertrand & A. Leduc"
 binary_star_type: SB1                           # SB1 or SB2
