--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -4,7 +4,7 @@ object_name: HD123299                           # Target name (useful for Simbad
 period:                                         # If the period of the orbit is already known use this param (period in days). 
 period_guess: 51                                # If the period is uncertain use this param (period in days).
 title: "α Dra - Phased radial-velocities - observations collected from April 2022 to April 2023"
-subtitle: "StarEx HR - G. Bertrand & A. Leduc"
+subtitle: "Star'Ex HR (2400 l/mm) - G. Bertrand & A. Leduc"
 binary_star_type: SB1                           # SB1 or SB2
 spec_file_regex: '_(.+)_(\d+)_(\d+)(.*).fits'   # Fits file pattern
 line_color: black                               # Define the color of the fitted velocity curve
