--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -17,7 +17,7 @@ lambda_ref: 6562.82
 model: voigt                                    # gaussian, voigt or lorentz
 spectral_region: 10
 fwhm: .5
-gaussian_width: 1.5
+window_width: 1.5
 
 # result options
 font_size: 9
