--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -1,6 +1,7 @@
 ---
 debug_mode: 1                                   # plot all spectra
 object_name: HD123299                           # Target name (useful for Simbad query)
+T0: 2451441.804                                 # Fix Periastron epoch T0 if known (julian date)
 period:                                         # If the period of the orbit is already known use this param (period in days). 
 period_guess: 51                                # If the period is uncertain use this param (period in days).
 title: "α Dra - Phased radial-velocities - observations collected from April 2022 to April 2023"
