--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -1,5 +1,5 @@
 ---
-debug_mode: 1                                   # plot all spectra
+debug_mode: 0                                   # plot all spectra
 object_name: HD123299                           # Target name (useful for Simbad query)
 T0: 2451441.804                                 # Fix Periastron epoch T0 if known (julian date)
 period:                                         # If the period of the orbit is already known use this param (period in days). 
@@ -9,7 +9,7 @@ subtitle: "Star'Ex HR (2400 l/mm) - G. Bertrand & A. Leduc"
 binary_star_type: SB1                           # SB1 or SB2
 spec_file_regex: '_(.+)_(\d+)_(\d+)(.*).fits'   # Fits file pattern
 line_color: black                               # Define the color of the fitted velocity curve
-points_color: red,black                         # Define the color of the dots ex 'red' or a color
+points_color: red,black,brown                   # Define the color of the dots ex 'red' or a color
                                                 # cycle for each observer ex with 3 observers 'red,black,yellow'
 
 radial_velocity_correction: barycentric         # The kind of velocity correction. Must be ‘barycentric’ or ‘heliocentric’.  
