--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -4,8 +4,8 @@ object_name: HD123299                           # Target name (useful for Simbad
 T0: 2451441.804                                 # Fix Periastron epoch T0 if known (julian date)
 period:                                         # If the period of the orbit is already known use this param (period in days). 
 period_guess: 51                                # If the period is uncertain use this param (period in days).
-title: "α Dra - Phased radial-velocities - observations collected from April 2022 to April 2023"
-subtitle: "Star'Ex HR (2400 l/mm) - G. Bertrand & A. Leduc"
+title: "α Dra - HD123299 - Phased radial velocities"
+subtitle: "April 2022 to April 2023 - Star'Ex HR (2400 l/mm) - G. Bertrand & A. Leduc"
 binary_star_type: SB1                           # SB1 or SB2
 spec_file_regex: '_(.+)_(\d+)_(\d+)(.*).fits'   # Fits file pattern
 line_color: black                               # Define the color of the fitted velocity curve
@@ -24,6 +24,8 @@ window_width: 1.5
 font_size: 9
 title_font_size: 9
 font_family: monospace
-fig_size_x: 9
-fig_size_y: 5
+fig_size_x: 8
+fig_size_y: 4
+fig_rv_y_multiple: 10
+fig_residual_y_multiple: 0.5
 dpi: 150
