new version, new data

--- a/bss.config.yaml
+++ b/bss.config.yaml
@@ -1,5 +1,5 @@
 ---
-debug_mode: 1                                   # plot all spectra
+debug_mode: 0                                   # plot all spectra
 object_name: HD123299                           # Target name (useful for Simbad query)
 T0: 2451441.804                                 # Fix Periastron epoch T0 if known (julian date)
 period:                                         # If the period of the orbit is already known use this param (period in days). 
@@ -9,7 +9,8 @@ subtitle: "April 2022 to April 2023 - Star'Ex HR (2400 l/mm)"
 binary_star_type: SB1                           # SB1 or SB2
 spec_file_regex: '_(.+)_(\d+)_(\d+)(.*).fits'   # Fits file pattern
 line_color: black                               # Define the color of the fitted velocity curve
-points_color: red,darkorange,gray,black                   # Define the color of the dots ex 'red' or a color
+markers_styles: o,v,^,s,D,P,X                   # Define the style of the dots by instruments type 'BSS_INST'
+markers_colors: red,darkorange,gray,black       # Define the color of the dots ex 'red' or a color
                                                 # cycle for each observer ex with 3 observers 'red,black,yellow'
 
 radial_velocity_correction: barycentric         # The kind of velocity correction. Must be ‘barycentric’ or ‘heliocentric’.  
@@ -24,8 +25,8 @@ window_width: 1.5
 font_size: 9
 title_font_size: 9
 font_family: monospace
-fig_size_x: 8
-fig_size_y: 4
+fig_size_x: 12
+fig_size_y: 7
 fig_rv_y_multiple: 10
 fig_residual_y_multiple: 0.5
 dpi: 150
