--- a/.gitignore
+++ b/.gitignore
@@ -134,5 +134,5 @@ pipreqs.bash
 .idea/
 
 sample/alphadra/bss_debug_result.png
-
 sample/alphadra/bss_phased_result.png
+sample/alphadra/bss_results.txt
