remove old files

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,15 +9,16 @@ description = Python module to find radial velocities of spectroscopic binaries 
 packages = find: # OR `find_namespace:` if you want to use namespaces
 python_requires = >=3.6
 install_requires =
-    astropy=>=5.2.2
-    astroquery=>=0.4.6
-    BinaryStarSolver=>=1.2.0
-    matplotlib=>=3.7.1
-    numpy=>=1.24.2
-    orbital=>=0.0.0
-    OrbitalPy=>=0.7.0
-    PyYAML=>=6.0
-    specutils=>=1.9.1
+    astropy==5.2.*
+    astroquery==0.4.*
+    BinaryStarSolver==1.2.*
+    matplotlib==3.7.*
+    numpy==1.24.*
+    orbital==0.0.0
+    OrbitalPy==0.7.0
+    PyYAML==6.0.*
+    specutils==1.9.*
+    plotly==5.14.*
 
 [options.packages.find]  # (always `find` even if `find_namespace:` was used before)
 include=spectroscopicbinarysystem/*  # * by default
