setupconfig + rename directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,10 @@ name = SpectroscopicBinarySystem
 version = 1.0.0
 author = Guillaume Bertrand
 author_email = gbe.io@pm.me
-description = Python module to find radial velocities of spectroscopic binaries spectra and then solves various orbital parameters with the library BinaryStarSolver and plot it with matplotlib.
+description = Python module to find radial velocities of spectroscopic binaries spectra and then solves various orbital parameters with the library BinaryStarSolver.
 
 [options]
-packages = find: # OR `find_namespace:` if you want to use namespaces
+packages = find:
 python_requires = >=3.6
 install_requires =
     astropy==5.2.*
@@ -20,6 +20,9 @@ install_requires =
     specutils==1.9.*
     plotly==5.14.*
 
-[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
-include=spectroscopicbinarysystem/*  # * by default
-
+[options.packages.find] 
+include=spectroscopicbinarysystem/* 
+exclude =
+    examples*
+    docs*
+    test*
