setuptools for pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,18 @@
 [metadata]
 name = SpectroscopicBinarySystem
-version = 1.0.0
+version = 1.0.2
 author = Guillaume Bertrand
 author_email = gbe.io@pm.me
-description = Python module to find radial velocities of spectroscopic binaries spectra and then solves various orbital parameters with the library BinaryStarSolver.
+description = Python astronomy tools for spectroscopic binary system
+long_description = file: README.md
+long_description_content_type = text/markdown
+license = BSD-3-Clause
+license_files = LICENSE
+keywords = astronomy,astrophysics,science,fits,models,fitting,spectroscopy,spectrum
 
 [options]
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.9
 install_requires =
     astropy==5.2.*
     astroquery==0.4.*
