minor update plotly

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = SpectroscopicBinarySystem
-version = 1.0.3
+version = 1.0.11
 author = Guillaume Bertrand
 author_email = gbe.io@pm.me
 description = Python astronomy tools for spectroscopic binary system
@@ -14,20 +14,13 @@ keywords = astronomy,astrophysics,science,fits,models,fitting,spectroscopy,spect
 packages = find:
 python_requires = >=3.9
 install_requires =
-    astropy==5.2.*
-    astroquery==0.4.*
-    BinaryStarSolver==1.2.*
-    matplotlib==3.7.*
-    numpy==1.24.*
-    orbital==0.0.0
-    OrbitalPy==0.7.0
-    PyYAML==6.0.*
-    specutils==1.9.*
-    plotly==5.14.*
-
-[options.packages.find] 
-include=spectroscopicbinarysystem/* 
-exclude =
-    examples*
-    docs*
-    test*
+    astropy>=5.2.2
+    astroquery>=0.4.6
+    BinaryStarSolver>=1.2.0
+    matplotlib>=3.7.1
+    numpy>=1.24.2
+    OrbitalPy>=0.7.0
+    PyYAML>=6.0
+    specutils>=1.9.1
+    BinaryStarSolver>=1.2.0
+    plotly>=5.14.1
